--- a/contact-us.html
+++ b/contact-us.html
@@ -10,7 +10,7 @@
     <title>Quality Designs | Contact Us</title>
     <!-- Stylesheets & Fonts -->
     <!-- Google Fonts -->
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i%7CRajdhani:400,600,700" rel="stylesheet">
     <!-- Plugins Stylesheets -->
     <link rel="stylesheet" href="assets/css/loader/loaders.css">
     <link rel="stylesheet" href="assets/css/font-awesome/font-awesome.css">
@@ -24,6 +24,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- custom additional styles -->
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom_responsive.css">
 </head>
 
 <body class="bg-blue">
@@ -49,21 +50,21 @@
 
             </div>
             <!-- navbar -->
-            <nav class="container navbar navbar-expand-md navbar-light bg-white text-black w-100 py-0 ">
+            <nav class="container navbar navbar-expand-md navbar-light bg-white text-black w-100 py-0">
 
                 <!-- image logo -->
-                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
+                <a class="navbar-brand pl-1" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
 
                 <!-- navbar toggler on small screens -->
-                <div class="group d-flex align-items-center">
+                <div class="group d-flex align-items-center mr-2">
                     <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon text-primary"></span>
                     </button>
                 </div>
 
                 <!-- collapsable nav -->
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav ">
+                <div class="collapse navbar-collapse justify-content-end pl-2" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link text-primary" href="./index.html">Home</a></li>
 
                         <li class="nav-item"><a class="nav-link text-primary" href="./about.html">About Us</a></li>
@@ -202,10 +203,10 @@
             
 
     <!-- <div class="container pt-1 mt-3 pb-5 mb-5 bg-blue" data-aos="fade-right" data-aos-delay="200" data-aos-duration="800"> -->
-    <div class="container pt-1 mt-3 pb-5 bg-blue" >
+    <div class="contact-message container pt-1 mt-3 pb-5 bg-blue" >
         <div class="row px-4 bg-blue">
             <!-- contact us -->
-            <div class="col-4 single-widget w-100 contact-widget text-grey bg-blue px-3" >
+            <div class="col-lg-4 col-sm-12 single-widget w-100 contact-widget text-grey bg-blue px-3" >
                 <h4 class="text-white text-start pt-2 text-uppercase mb-3 "> <span class="light-sans text-white">Contact</span> Details</h4>
                 <ul class="list-group bg-l-orange py-3 pl-5" >
 
@@ -234,7 +235,6 @@
                             <li><a href="https://www.facebook.com/fh5co" target="_blank"><i class="fa fa-facebook "></i></a></li>
                             <li><a href="#" target="_blank"><i class="fa fa-google-plus "></i></a></li>
                             <li><a href="#" target="_blank"><i class="fa fa-twitter "></i></a></li>
-                            <li><a href="#" target="_blank"><i class="fa fa-google-plus "></i></a></li>
                             <li><a href="#" target="_blank"><i class="fa fa-linkedin "></i></a></li>
                         </ul>
                     </div>
@@ -243,7 +243,7 @@
             </div>
         
             <!-- contact form -->
-            <div id="contact-form" class="col-8 contact-form single-widget subscribe-widget px-auto bg-blue">
+            <div id="contact-form " class="col-lg-8 col-sm-12 contact-form single-widget subscribe-widget px-auto bg-blue">
                 <h4 class="text-start bg-blue w-100 pt-2 text-white  mb-3 text-uppercase" ><span class="light-sans text-white">Leave Us A</span>  Message</h4>
                 <form class="row pt-2 ml-1 bg-grey" netlify >
                     <div class="input-group col-md-6 my-1">
