--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Document title -->
     <title>Quality Designs | Home</title>
     <!-- Stylesheets & Fonts -->
-    <!-- Google Fonts -->
+    <!-- open sans Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,400i,700,700i" rel="stylesheet">
     <!-- Plugins Stylesheets -->
     <link rel="stylesheet" href="assets/css/loader/loaders.css">
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- custom additional styles -->
     <link rel="stylesheet" href="assets/css/custom.css">
+    <link rel="stylesheet" href="assets/css/custom_responsive.css">
 </head>
 
 <body>
@@ -48,21 +49,21 @@
 
             </div>
             <!-- navbar -->
-            <nav class="container navbar navbar-expand-md navbar-light bg-white text-black w-100 py-0 ">
+            <nav class="container navbar navbar-expand-md navbar-light bg-white text-black w-100 py-0">
 
                 <!-- image logo -->
-                <a class="navbar-brand" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
+                <a class="navbar-brand pl-1" href="index.html"><img src="assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
 
                 <!-- navbar toggler on small screens -->
-                <div class="group d-flex align-items-center">
+                <div class="group d-flex align-items-center mr-2">
                     <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon text-primary"></span>
                     </button>
                 </div>
 
                 <!-- collapsable nav -->
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                    <ul class="navbar-nav ">
+                <div class="collapse navbar-collapse justify-content-end pl-2" id="navbarSupportedContent">
+                    <ul class="navbar-nav">
                         <li class="nav-item"><a class="nav-link text-primary" href="./index.html">Home</a></li>
 
                         <li class="nav-item"><a class="nav-link text-primary" href="./about.html">About Us</a></li>
@@ -453,7 +454,7 @@
             </div>
 
             <!-- consulting -->
-            <div class="col-lg-8">
+            <div class="col-lg-8 consulting">
                 <h5 class="title text-primary text-left"><a href="products/consulting.html">IT Advisory / Consulting</a></h5>
                 <p>
                     Effectively manage IT governance and risk while also ensuring business and regulatory compliance.
@@ -652,7 +653,7 @@
                             <ul class="list-group bg-secondary" style="background-color: #FF9D00;" >
                                 <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="industries.html">Industries</a class="text-white"></li>
                                 <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="vecancies.html">Available Vacancies</a></li>
-                                <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">Our Leadership</a></li>
+                                <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html#message">Our Leadership</a></li>
                                 <li class="list-group-item py-1 pl-0" style="background-color: #FF9D00; border: none;"><a class="text-white" href="about.html">About Us</a></li>
                             </ul>
                         </div>
