--- a/products/consulting.html
+++ b/products/consulting.html
@@ -25,7 +25,7 @@
     <link rel="stylesheet" href="../assets/css/responsive.css">
     <!-- custom additional styles -->
     <link rel="stylesheet" href="../assets/css/custom.css">
-</head>
+    <link rel="stylesheet" href="../assets/css/custom_responsive.css"></head>
 
 <body>
     <!-- Loader Start -->
@@ -35,7 +35,7 @@
     <!-- Loader End -->
     <!-- Header Start -->
     <!-- Header Start -->
-    <header class="sticky-top w-100 bg-white container-fluid p-0">
+    <header class="sticky-top  w-100 bg-white container-fluid p-0">
         <div class="">
             <!-- top header -->
             <div class=" bg-primary">
@@ -54,17 +54,17 @@
             <nav class="container navbar navbar-expand-md navbar-light bg-white text-black w-100 py-0 ">
 
                 <!-- image logo -->
-                <a class="navbar-brand" href="../index.html"><img src="../assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
+                <a class="navbar-brand pl-1" href="../index.html"><img src="../assets/images/logo.jpeg" width="200" height="70" alt="Multipurpose"></a>
 
                 <!-- navbar toggler on small screens -->
-                <div class="group d-flex align-items-center">
+                <div class="group d-flex align-items-center mr-2">
                     <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon text-primary"></span>
                     </button>
                 </div>
 
                 <!-- collapsable nav -->
-                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                <div class="collapse navbar-collapse justify-content-end pl-2" id="navbarSupportedContent">
                     <ul class="navbar-nav ">
                         <li class="nav-item"><a class="nav-link text-primary" href="../index.html">Home</a></li>
 
@@ -135,6 +135,7 @@
 
                         <li class="nav-item"><a class="nav-link text-primary" href="../industries.html">Industries</a></li>
 
+
                         <li class="nav-item"><a class="nav-link text-primary" href="../contact-us.html">Contact Us</a></li>
                     </ul>
 
@@ -151,7 +152,7 @@
                 <img src="../assets/images/heros/IT Advisory.png" alt="">
             </div>
 
-            <div class="col-lg-7 text d-flex align-items-end mb-3">
+            <div class="col-lg-7 text d-flex align-items-end my-3">
                 <h1 class="title title-orange">
                     IT Advisory / Consulting
                 </h1>
@@ -159,19 +160,19 @@
 
         </div>
 
-        <div class="container row py-4 mx-auto">
+        <div class="container content row py-4 mx-auto">
             <!-- left -->
             <div class="left col-lg-4 px-0 text-right text-primary">
-                <h3 >
+                <h4 >
                     Effectively manage IT governance and risk while also ensuring business and regulatory compliance.
-                </h3>
-                <h3>
+                </h4>
+                <h4>
                     Quality Designs helps organisations analyze, audit and manage their governance, risk and compliance
-                </h3>
+                </h4>
             </div>
 
             <!-- right -->
-            <div class="col-lg-7 ml-5 pl-4 text-left">
+            <div class="col-lg-7 right ml-5 pl-4 text-left">
 
                 <!-- Governance, Risk & Compliance -->
                 <div class="service border-bottom border-secondary">
