--- a/vecancies.html
+++ b/vecancies.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <!-- Document title -->
     <title>Quality Designs | Careers </title>
     <!-- Stylesheets & Fonts -->
