--- a/products/digital-ppm.html
+++ b/products/digital-ppm.html
@@ -149,7 +149,7 @@
     <!-- Header End -->
 
     <!-- Hero Start -->
-    <section class="hero left-title-hero iot-hero hero-xsm">
+    <section class="hero left-title-hero ppm-hero hero-xsm">
         <div class="container">
             <div class="row">
                 <!-- swiper / slider -->
